[gd_scene load_steps=11 format=3 uid="uid://7j4qq2j1bvd8"]

[ext_resource type="Texture2D" uid="uid://c4bgwemjef4s5" path="res://Assets/env/elementStone025.png" id="1_dr6pc"]
[ext_resource type="Script" uid="uid://ci6ucbpkbabrs" path="res://Scenes/Test/Bird1.gd" id="2_kptja"]
[ext_resource type="Texture2D" uid="uid://diqiwesssug33" path="res://icon.svg" id="2_wjuvt"]
[ext_resource type="Texture2D" uid="uid://2gwrnwmhx41m" path="res://Assets/env/elementWood015.png" id="3_1h1h0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wjuvt"]
size = Vector2(20, 672)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dr6pc"]
size = Vector2(1154, 24)

[sub_resource type="CircleShape2D" id="CircleShape2D_1h1h0"]
radius = 32.01562

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kptja"]
size = Vector2(590, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1h1h0"]
size = Vector2(23, 38)

[sub_resource type="CircleShape2D" id="CircleShape2D_kptja"]
radius = 16.0

[node name="Test" type="Node2D"]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(8, 0)

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(-0.99999905, 324.5)
scale = Vector2(0.34285715, 3.1227272)
texture = ExtResource("1_dr6pc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 326)
shape = SubResource("RectangleShape2D_wjuvt")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(1142, 0)

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D2"]
position = Vector2(-0.99999905, 324.5)
scale = Vector2(0.34285715, 3.1227272)
texture = ExtResource("1_dr6pc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(0, 326)
shape = SubResource("RectangleShape2D_wjuvt")

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(584, 320)

[node name="Sprite2D" type="Sprite2D" parent="Floor"]
position = Vector2(-12.550018, 324.5)
rotation = 1.5707964
scale = Vector2(0.34285715, 5.227728)
texture = ExtResource("1_dr6pc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(-8, 324)
shape = SubResource("RectangleShape2D_dr6pc")

[node name="Bird1" type="RigidBody2D" parent="."]
position = Vector2(435, 150)
input_pickable = true
freeze = true
contact_monitor = true
max_contacts_reported = 10
script = ExtResource("2_kptja")

[node name="Sprite2D" type="Sprite2D" parent="Bird1"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_wjuvt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bird1"]
shape = SubResource("CircleShape2D_1h1h0")

[node name="Label" type="Label" parent="Bird1"]
offset_left = -20.0
offset_top = -106.0
offset_right = 21.0
offset_bottom = -35.0
theme_override_font_sizes/font_size = 24
text = "000
000"

[node name="Timer" type="Timer" parent="Bird1"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="RigidBody2D2" type="RigidBody2D" parent="."]
position = Vector2(302, 145)

[node name="Sprite2D" type="Sprite2D" parent="RigidBody2D2"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_wjuvt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D2"]
shape = SubResource("CircleShape2D_1h1h0")

[node name="RigidBody2D3" type="RigidBody2D" parent="."]
position = Vector2(894, 548)

[node name="Sprite2D" type="Sprite2D" parent="RigidBody2D3"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_wjuvt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D3"]
shape = SubResource("CircleShape2D_1h1h0")

[node name="RigidBody2D" type="RigidBody2D" parent="RigidBody2D3"]

[node name="Plank" type="RigidBody2D" parent="."]
position = Vector2(498, 616)

[node name="Sprite2D" type="Sprite2D" parent="Plank"]
position = Vector2(186.5, -27)
scale = Vector2(2.6954546, 0.22857143)
texture = ExtResource("3_1h1h0")

[node name="Sprite2D2" type="Sprite2D" parent="Plank"]
position = Vector2(471.00003, -54)
scale = Vector2(0.09772713, 0.54285717)
texture = ExtResource("3_1h1h0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plank"]
position = Vector2(187, -27.5)
shape = SubResource("RectangleShape2D_kptja")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Plank"]
position = Vector2(471, -54)
shape = SubResource("RectangleShape2D_1h1h0")

[node name="Pivot" type="RigidBody2D" parent="."]
position = Vector2(640, 616)

[node name="Sprite2D" type="Sprite2D" parent="Pivot"]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_wjuvt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot"]
shape = SubResource("CircleShape2D_kptja")

[connection signal="input_event" from="Bird1" to="Bird1" method="_on_input_event"]
[connection signal="sleeping_state_changed" from="Bird1" to="Bird1" method="_on_sleeping_state_changed"]
[connection signal="timeout" from="Bird1/Timer" to="Bird1" method="_on_timer_timeout"]
